--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "@semantic-release/release-notes-generator": "^11.0.1",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@vercel/otel": "^0.3.0",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "lodash": "^4.17.21",
     "next": "^13.3.0",
     "next-compose-plugins": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
